[project]
name = "pinotify"
description = "A small software for receiving notification of a Raspberry Pi (RPi) pin and optionally run a command everytime."
version = "0.0.1"
authors = [
  { name="Koala Yeung", email="koalay@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
    "Environment :: Console",
    "Environment :: No Input/Output (Daemon)",
]
license = "MIT"
license-files = ["LICENSE.md"]
dependencies = [
    "gpiod >= 2.3.0",
]

[project.urls]
Homepage = "https://github.com/yookoala/pinotify"
Issues = "https://github.com/yookoala/pinotify/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"